--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 
 <header>
   <div class="nav">
-    <div class="logo">KOVECREEK</div>
+    <div class="logo">KOVCREEK INC</div>
     <nav>
   <a href="about.html">About</a>
   <a href="products.html">Products</a>
