--- a/contact.html
+++ b/contact.html
@@ -60,12 +60,15 @@
 <body>
 
 <header>
-  <strong>KOVECREEK</strong>
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="about.html">About</a>
-    <a href="products.html">Products</a>
-  </nav>
+  <div class="nav">
+    <div class="logo">KOVCREEK INC</div>
+    <nav>
+  <a href="about.html">About</a>
+  <a href="products.html">Products</a>
+  <a href="about.html#capabilities">Capabilities</a>
+  <a href="contact.html">Contact</a>
+</nav>
+  </div>
 </header>
 
 <section>
