--- a/contact.html
+++ b/contact.html
@@ -79,9 +79,8 @@
   </p>
 
   <div class="box">
-    <p><strong>Email:</strong> partnerships@kovecreek.com</p>
+    <p><strong>Email:</strong> raj@rmglobaltex.com</p>
     <p><strong>Regions Served:</strong> USA · India · Asia</p>
-    <p><strong>Business Type:</strong> B2B Apparel Sourcing</p>
   </div>
 </section>
 
