--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
 </section>
 
 <footer>
-  © 2026 Kovecreek Inc. — Global Apparel Imports
+  © 2026 Kovcreek Inc. — Global Apparel Imports
 </footer>
 
 <script>
