--- a/products.html
+++ b/products.html
@@ -1,55 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Products | Kovecreek Inc.</title>
 
   <style>
-    body {
-      font-family: Arial, sans-serif;
+    * {
       margin: 0;
-      color: #111;
+      padding: 0;
+      box-sizing: border-box;
     }
 
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI",
+        Helvetica, Arial, sans-serif;
+      background: #ffffff;
+      color: #111;
+      line-height: 1.6;
+    }
+
+    /* NAV (same as index.html) */
     header {
-      padding: 24px 40px;
       border-bottom: 1px solid #e5e5e5;
+      background: #fff;
+      position: sticky;
+      top: 0;
+      z-index: 100;
+    }
+
+    .nav {
+      max-width: 1400px;
+      margin: auto;
+      padding: 24px 40px;
       display: flex;
       justify-content: space-between;
+      align-items: center;
+    }
+
+    .logo {
+      font-weight: 800;
+      letter-spacing: 1px;
+      font-size: 22px;
     }
 
     nav a {
-      margin-left: 30px;
+      margin-left: 32px;
       text-decoration: none;
       color: #111;
       font-size: 14px;
+      letter-spacing: 1px;
       text-transform: uppercase;
     }
 
+    nav a:hover {
+      opacity: 0.6;
+    }
+
+    /* PAGE CONTENT */
     section {
       max-width: 1400px;
       margin: auto;
-      padding: 100px 40px;
+      padding: 120px 40px;
     }
 
     h1 {
       font-size: 56px;
-      margin-bottom: 40px;
+      margin-bottom: 50px;
+      letter-spacing: -1px;
     }
 
     .grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 50px;
+      gap: 60px;
     }
 
     .card {
       border-top: 1px solid #e5e5e5;
-      padding-top: 20px;
+      padding-top: 24px;
     }
 
     .card h3 {
-      margin-bottom: 10px;
+      font-size: 22px;
+      margin-bottom: 12px;
     }
 
     .card p {
@@ -58,9 +92,10 @@
 
     footer {
       border-top: 1px solid #e5e5e5;
-      padding: 60px;
+      padding: 80px 40px;
       text-align: center;
       color: #777;
+      font-size: 14px;
     }
   </style>
 </head>
@@ -71,14 +106,13 @@
   <div class="nav">
     <div class="logo">KOVCREEK INC</div>
     <nav>
-  <a href="about.html">About</a>
-  <a href="products.html">Products</a>
-  <a href="about.html#capabilities">Capabilities</a>
-  <a href="contact.html">Contact</a>
-</nav>
+      <a href="about.html">About</a>
+      <a href="products.html">Products</a>
+      <a href="about.html#capabilities">Capabilities</a>
+      <a href="contact.html">Contact</a>
+    </nav>
   </div>
 </header>
-
 
 <section>
   <h1>Our Product Categories</h1>
@@ -112,7 +146,7 @@
 </section>
 
 <footer>
-  © 2026 Kovecreek Inc.
+  © 2026 Kovecreek Inc. — Global Apparel Imports
 </footer>
 
 </body>
