--- a/about.html
+++ b/about.html
@@ -6,29 +6,58 @@
   <title>About Us | Kovecreek Inc.</title>
 
   <style>
-    body {
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Arial;
+    * {
       margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI",
+        Helvetica, Arial, sans-serif;
+      background: #ffffff;
       color: #111;
       line-height: 1.7;
     }
 
+    /* NAV (same as all other pages) */
     header {
       border-bottom: 1px solid #e5e5e5;
+      background: #fff;
+      position: sticky;
+      top: 0;
+      z-index: 100;
+    }
+
+    .nav {
+      max-width: 1400px;
+      margin: auto;
       padding: 24px 40px;
       display: flex;
       justify-content: space-between;
       align-items: center;
     }
 
+    .logo {
+      font-weight: 800;
+      letter-spacing: 1px;
+      font-size: 22px;
+    }
+
     nav a {
-      margin-left: 30px;
+      margin-left: 32px;
       text-decoration: none;
       color: #111;
       font-size: 14px;
+      letter-spacing: 1px;
       text-transform: uppercase;
     }
 
+    nav a:hover {
+      opacity: 0.6;
+    }
+
+    /* PAGE CONTENT */
     section {
       max-width: 1200px;
       margin: auto;
@@ -38,16 +67,19 @@
     h1 {
       font-size: 64px;
       margin-bottom: 30px;
+      letter-spacing: -1px;
     }
 
     h2 {
       font-size: 36px;
       margin-bottom: 20px;
+      letter-spacing: -0.5px;
     }
 
     p {
       color: #555;
       max-width: 900px;
+      font-size: 18px;
     }
 
     .block {
@@ -56,9 +88,10 @@
 
     footer {
       border-top: 1px solid #e5e5e5;
-      padding: 60px;
+      padding: 80px 40px;
       text-align: center;
       color: #777;
+      font-size: 14px;
     }
   </style>
 </head>
@@ -69,11 +102,11 @@
   <div class="nav">
     <div class="logo">KOVCREEK INC</div>
     <nav>
-  <a href="about.html">About</a>
-  <a href="products.html">Products</a>
-  <a href="about.html#capabilities">Capabilities</a>
-  <a href="contact.html">Contact</a>
-</nav>
+      <a href="about.html">About</a>
+      <a href="products.html">Products</a>
+      <a href="about.html#capabilities">Capabilities</a>
+      <a href="contact.html">Contact</a>
+    </nav>
   </div>
 </header>
 
@@ -118,7 +151,7 @@
 </section>
 
 <footer>
-  © 2026 Kovecreek Inc.
+  © 2026 Kovecreek Inc. — Global Apparel Imports
 </footer>
 
 </body>
