--- a/index.html
+++ b/index.html
@@ -218,6 +218,7 @@
   <a href="products.html">Products</a>
   <a href="about.html#capabilities">Capabilities</a>
   <a href="contact.html">Contact</a>
+  <a href'"index.html">Home</a>
 </nav>
   </div>
 </header>
