--- a/products.html
+++ b/products.html
@@ -106,10 +106,11 @@
   <div class="nav">
     <div class="logo">KOVCREEK INC</div>
     <nav>
-      <a href="about.html">About</a>
-      <a href="products.html">Products</a>
-      <a href="about.html#capabilities">Capabilities</a>
-      <a href="contact.html">Contact</a>
+     <a href="about.html">About</a>
+  <a href="products.html">Products</a>
+  <a href="about.html#capabilities">Capabilities</a>
+  <a href="contact.html">Contact</a>
+  <a href'"index.html">Home</a>
     </nav>
   </div>
 </header>
