--- a/about.html
+++ b/about.html
@@ -103,9 +103,10 @@
     <div class="logo">KOVCREEK INC</div>
     <nav>
       <a href="about.html">About</a>
-      <a href="products.html">Products</a>
-      <a href="about.html#capabilities">Capabilities</a>
-      <a href="contact.html">Contact</a>
+  <a href="products.html">Products</a>
+  <a href="about.html#capabilities">Capabilities</a>
+  <a href="contact.html">Contact</a>
+  <a href'"index.html">Home</a>
     </nav>
   </div>
 </header>
