--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Kovecreek Inc. | Global Apparel Sourcing</title>
+  <title>Kovcreek Inc. | Global Apparel Sourcing</title>
 
   <style>
     * {
@@ -226,7 +226,7 @@
 <section class="hero">
   <h1>Global Apparel Sourcing<br>Built on Trust & Precision</h1>
   <p>
-    Kovecreek Inc. is a global apparel sourcing and import company,
+    Kovcreek Inc. is a global apparel sourcing and import company,
     partnering with world-class manufacturers across India and Asia.
   </p>
   <a href="#" class="btn">Start a Partnership</a>
@@ -291,7 +291,7 @@
 </section>
 
 <section>
-  <h2>Why Brands Trust Kovecreek</h2>
+  <h2>Why Brands Trust Kovcreek</h2>
 
   <div class="grid">
     <div class="card">
