--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>About Us | Kovecreek Inc.</title>
+  <title>About Us | Kovcreek Inc.</title>
 
   <style>
     * {
@@ -112,9 +112,9 @@
 </header>
 
 <section>
-  <h1>About Kovecreek Inc.</h1>
+  <h1>About Kovcreek Inc.</h1>
   <p>
-    Kovecreek Inc. is a global apparel sourcing and import company built to serve
+    Kovcreek Inc. is a global apparel sourcing and import company built to serve
     modern fashion brands with precision, accountability, and scale.
   </p>
 
@@ -152,7 +152,7 @@
 </section>
 
 <footer>
-  © 2026 Kovecreek Inc. — Global Apparel Imports
+  © 2026 Kovcreek Inc. — Global Apparel Imports
 </footer>
 
 </body>
