--- a/products.html
+++ b/products.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Products | Kovecreek Inc.</title>
+  <title>Products | Kovcreek Inc.</title>
 
   <style>
     * {
@@ -147,7 +147,7 @@
 </section>
 
 <footer>
-  © 2026 Kovecreek Inc. — Global Apparel Imports
+  © 2026 Kovcreek Inc. — Global Apparel Imports
 </footer>
 
 </body>
